--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <i data-lucide="calendar"></i>
                 </div>
                 <h3>Data</h3>
-                <p>Sábado, 12 de Abril de 2026</p>
+                <p>Domingo, 12 de Abril de 2026</p>
             </div>
 
             <div class="info-card">
